--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,10 +11,10 @@ Date: September 27, 2023 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Thu Ha Le - Personal Portfolio Website" />
     <meta name="keywords"
-        content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
+        content="online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme" />
     <title>Thu Ha Le - Personal Portfolio Website</title>
     <link rel="icon" type="image/png" href="images/logo.png">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="stylesheets/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
 </head>
 
@@ -108,10 +108,8 @@ Date: September 27, 2023 -->
 
     <%- include ('contact.ejs') %>
      -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/index.js"></script>
-
-
+    <script src="javascripts/jquery.min.js"></script>
+    <script src="javascripts/index.js"></script>
 </body>
 
 </html>
