Update partials/header.ejs and footer.ejs

--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -3,7 +3,7 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
-<main>
+<body>
     <div id="all">
         <div class="cursor"></div>
         <div id="breaker">
@@ -179,4 +179,4 @@ Date: September 27, 2023 -->
             <!-- my skills end -->
         </div>
     </div>
-</main>
+</body>
