--- a/app/views/services.ejs
+++ b/app/views/services.ejs
@@ -3,7 +3,7 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
-<main>
+<body>
     <div id="all">
         <div class="cursor"></div>  
         <div id="breaker">
@@ -89,4 +89,4 @@ Date: September 27, 2023 -->
         <!--services content end-->
         <!--services end-->
     </div>
-</main>
+</body>
