--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -3,7 +3,7 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
-<main>
+<body>
     <div id="all">
         <div class="cursor"></div>
         <div id="breaker">
@@ -118,6 +118,4 @@ Date: September 27, 2023 -->
         </div>
         <!--contact end-->
     </div>
-</main>
-
-</html>
+</body>
