--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,7 +2,6 @@
 Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -78,7 +77,7 @@ Date: September 27, 2023 -->
                     <div class="secondline">
                         I'm a
                         <span class="txt-rotate color" data-period="1200"
-                            data-rotate='[ " Software Engineer.", " Designer.", " Freelancer." ]'></span>
+                            data-rotate="[ 'Software Engineer.', 'Designer.', 'Freelancer.' ]"></span>
                         <span class="slash">|</span>
                     </div>
                     <div class="contact">
@@ -99,15 +98,6 @@ Date: September 27, 2023 -->
         <!--HomePage End-->
         <!--Main-Section End-->
     </div>
-
-    <!-- <%- include ('about.ejs') %>
-
-    <%- include ('services.ejs') %>
-
-    <%- include ('projects.ejs') %>
-
-    <%- include ('contact.ejs') %>
-     -->
     <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/index.js"></script>
 </body>
