--- a/app/views/projects.ejs
+++ b/app/views/projects.ejs
@@ -3,7 +3,7 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
-<main>
+<body>
     <div id="all">
         <div class="cursor"></div>
         <div id="breaker">
@@ -131,4 +131,4 @@ Date: September 27, 2023 -->
         </div>
         <!--portfolio end-->
     </div>
-</main>
+</body>
