Update partials/header.ejs and footer.ejs

--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -3,6 +3,8 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
+<%- include ('partials/header.ejs') %>
+
 <body>
     <div id="all">
         <div class="cursor"></div>
@@ -179,4 +181,5 @@ Date: September 27, 2023 -->
             <!-- my skills end -->
         </div>
     </div>
-</body>
+
+    <%- include ('partials/footer.ejs') %>
