--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -3,7 +3,8 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
-<body>
+<%- include ('partials/header.ejs') %>
+
     <div id="all">
         <div class="cursor"></div>
         <div id="breaker">
@@ -118,4 +119,5 @@ Date: September 27, 2023 -->
         </div>
         <!--contact end-->
     </div>
-</body>
+
+    <%- include ('partials/footer.ejs') %>
