--- a/app/views/services.ejs
+++ b/app/views/services.ejs
@@ -3,9 +3,10 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
-<body>
+<%- include ('partials/header.ejs') %>
+
     <div id="all">
-        <div class="cursor"></div>  
+        <div class="cursor"></div>
         <div id="breaker">
         </div>
         <div id="breaker-two">
@@ -89,4 +90,5 @@ Date: September 27, 2023 -->
         <!--services content end-->
         <!--services end-->
     </div>
-</body>
+
+    <%- include ('partials/footer.ejs') %>
