--- a/app/views/projects.ejs
+++ b/app/views/projects.ejs
@@ -3,7 +3,8 @@ Student Name: Thu Ha Le
 Student ID: 301259611 
 Date: September 27, 2023 -->
 
-<body>
+<%- include ('partials/header.ejs') %>
+
     <div id="all">
         <div class="cursor"></div>
         <div id="breaker">
@@ -131,4 +132,5 @@ Date: September 27, 2023 -->
         </div>
         <!--portfolio end-->
     </div>
-</body>
+
+    <%- include ('partials/footer.ejs') %>
